Fix test build failure

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,8 +2,8 @@ noinst_PROGRAMS = iniexample parse
 
 iniexample_SOURCES = iniexample.c
 iniexample_CFLAGS = -I../src
-iniexample_LDADD = -L.. -liniparser
+iniexample_LDADD = -L../src -liniparser
 
 parse_SOURCES = parse.c
 parse_CFLAGS = -I../src
-parse_LDADD = -L.. -liniparser
+parse_LDADD = -L../src -liniparser
