Install the header files correctly

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,6 @@
 lib_LTLIBRARIES = libiniparser.la
 
+iniparserdir = $(includedir)/iniparser
+iniparser_HEADERS = dictionary.h iniparser.h
+
 libiniparser_la_SOURCES = dictionary.c iniparser.c
